Miggration completed multimedia

--- a/src/drumee/builtins/media/grid/skin/filename.scss
+++ b/src/drumee/builtins/media/grid/skin/filename.scss
@@ -16,7 +16,7 @@
 
   &[data-hover="on"] {
     color: var(--default-text-color);
-    background-color: $multimedia-main-background-filename;
+    background-color: var(--multimedia-main-filename-bg);
 
     &.private.hub {
       color: var(--default-text-color);
@@ -42,7 +42,7 @@
   &.audio, &.document, &.vector, &.other {
     &[data-hover="on"] {
       color: var(--default-text-color);
-      background-color: $multimedia-main-background-filename;
+      background-color: var(--multimedia-main-filename-bg);
     }
   }
 
@@ -80,7 +80,7 @@
   @include typo($line:14px,$size:10px,$weight:400,$color:var(--default-text-color));
 
   &[data-hover="on"] {
-    background-color: $multimedia-main-background-filename;
+    background-color: var(--multimedia-main-filename-bg);
     color: var(--default-text-color);
     display: block;
     opacity: 1;
@@ -111,7 +111,7 @@
 
     &.audio, &.document, &.vector, &.other {
       color: var(--default-text-color);
-      background-color: $multimedia-main-background-filename;
+      background-color: var(--multimedia-main-filename-bg);
     }
     &.document{
       max-height: calc(100% - -4px);
