--- a/src/drumee/builtins/player/audio/skin/index.scss
+++ b/src/drumee/builtins/player/audio/skin/index.scss
@@ -27,7 +27,7 @@
   }
 
   &__content {
-    background-color: $audio-player-background;
+    background-color: var(--audio-player-bg);
   }
 
   &__header {
@@ -50,7 +50,7 @@
     }
 
     &.player {
-      background-color: $audio-player-background;
+      background-color: var(--audio-player-bg);
       height: 46px;
       min-height: 46px;
     }
@@ -61,7 +61,7 @@
   }
 
   &__footer {
-    background-color: $multimedia-audio-player-background-footer;
+    background-color: var(--multimedia-audio-player-footer-bg);
     height: 20px;
     min-height: 20px;
     width: 100%;
@@ -82,7 +82,7 @@
   }
 
   &__icon {
-    color: $multimedia-audio-player-icon;
+    color: var(--multimedia-audio-player-icon);
     cursor: pointer;
     height: 16px;
     margin: 0px 10px;
@@ -106,7 +106,7 @@
 
   &__ui {
     & .loader-progress {
-      background-color: $audio-player-background;
+      background-color: var(--audio-player-bg);
       height: 100%;
       justify-content: center;
       left: 35%;
