--- a/src/drumee/builtins/player/video/skin/index.scss
+++ b/src/drumee/builtins/player/video/skin/index.scss
@@ -19,7 +19,7 @@
   }
 
   &__video {
-    background-color: $multimedia-player-vdo-background-color; //black;
+    background-color: var(--multimedia-player-vdo-bg); //black;
     height: 100%;
     width: 100%;
   }
