--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -10,7 +10,7 @@
 @import 'filter';
 @import 'folder';
 @import 'connect';
-@import 'multimedia';
+// @import 'multimedia';
 // @import 'website';
 // @import 'sharebox';
 // @import 'sharebox';
