--- a/src/drumee/builtins/player/audio/skin/topbar.scss
+++ b/src/drumee/builtins/player/audio/skin/topbar.scss
@@ -42,7 +42,7 @@
       justify-content: center;
       padding: 0;
       width: 316px;
-      @include typo($size:16px, $line:24px, $weight:300, $color: $multimedia-default-text-title);// var(--default-text-color));// $size:18px,
+      @include typo($size:16px, $line:24px, $weight:300, $color: var(--multimedia-default-text-title));// var(--default-text-color));// $size:18px,
       @include overflow-text;
 
       &.inner.note-content {
