--- a/src/drumee/builtins/player/document/page/skin/index.scss
+++ b/src/drumee/builtins/player/document/page/skin/index.scss
@@ -7,7 +7,7 @@
 
 .player-page {
   &__ui {
-    background-color: $multimedia-player-doc-background; //$player-image-background;
+    background-color: var(--multimedia-player-doc-bg); //$player-image-background;
     overflow: hidden;
     height: auto;
     min-height: 100px;
