--- a/src/drumee/builtins/player/image/skin/index.scss
+++ b/src/drumee/builtins/player/image/skin/index.scss
@@ -5,7 +5,7 @@
 
     & .player-image__slider-main,
     & .player-image__container {
-      background: $multimedia-player-image-background;
+      background: var(--multimedia-player-image-bg);
       width: 100%;
       height: 100%;
       position: absolute;
@@ -20,7 +20,7 @@
 
   &__slider-main {
     align-items: center;
-    background: $multimedia-slider-player-image-background; //$default-background-black;
+    background: var(--multimedia-slider-player-image-bg); //$default-background-black;
     border-radius: 0px 0px 6px 6px;
     height: calc(100% - 42px);
     justify-content: center;
@@ -35,7 +35,7 @@
     align-items: center;
     align-content: center;
     justify-content: center;
-    background-color: $multimedia-player-image-background; // black;
+    background-color: var(--multimedia-player-image-bg); // black;
   }
 
   &__slider-buttons {
