--- a/src/drumee/builtins/webrtc/skin/remote.scss
+++ b/src/drumee/builtins/webrtc/skin/remote.scss
@@ -3,7 +3,7 @@
   flex: 1;
   max-height: 100%;
   overflow-y: auto;
-  background-color:$multimedia-vdo-background-color;// $vdo-background-color;//#494949;
+  background-color:var(--multimedia-background);// $vdo-background-color;//#494949;
   border-radius: $default-border-radius-bottom;
   .smart-container {
     align-items: center;
