--- a/src/drumee/builtins/window/schedule/skin/command.scss
+++ b/src/drumee/builtins/window/schedule/skin/command.scss
@@ -25,7 +25,7 @@
     color: var(--egrey-b6); //grey;
     cursor: pointer;
     &.line{
-     background-color:$multimedia-vdo-ctrl-button;//$vdo-ctrl-button;
+     background-color:var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button;
      color:var(--ewhite); 
      fill: none;
      stroke-width: 0;//1.5px;
@@ -39,10 +39,10 @@
      }
     }
     &.reject{
-      background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button;  //red;
+      background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button;  //red;
     }
     &.screen{
-      color:$multimedia-vdo-button-accept; // green;
+      color:var(--multimedia-vdo-button-accept); // green;
       padding: 3.5px;//8.5px;
       margin-left:14px;
       &[data-state="0"]{
@@ -56,14 +56,14 @@
           width: 31px;//29px;//33px;
           top: 15px;//16px;
           left: 1px;//0px;  
-          background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; //red;
+          background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; //red;
           transform-origin : 50% 50%;
           transform: rotate(-45deg);
         }
       }
     }
     &.accept{
-      color:$multimedia-vdo-button-accept; // green;
+      color:var(--multimedia-vdo-button-accept); // green;
     }
     &[data-state="0"]{
       color:var(--egrey-b6); //var(--egrey-89); #d3d3d3
@@ -76,13 +76,13 @@
         width: 25px;
         top: 16px; //12px;
         left: 3px; //10px;
-        background-color: $multimedia-vdo-ctrl-button;// $vdo-ctrl-button; //red;
+        background-color: var(--multimedia-vdo-ctrl-button);// $vdo-ctrl-button; //red;
         transform-origin : 50% 50%;
         transform: rotate(-45deg);
       }
     }
     &[data-online="1"]{
-      background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; //red;
+      background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; //red;
       color: var(--ewhite);
     }
     &[data-enabled="0"]{
