--- a/src/drumee/builtins/window/screenshare/skin/command.scss
+++ b/src/drumee/builtins/window/screenshare/skin/command.scss
@@ -39,10 +39,10 @@
         }
       }
       &.reject{
-        background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button;  //red;
+        background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button;  //red;
       }
       &.screen{
-        color:$multimedia-vdo-button-accept;//$vdo-button-accept; // green;
+        color:var(--multimedia-vdo-button-accept);//$vdo-button-accept; // green;
         padding: 3.5px;//8.5px;
         margin-left: 14px;
       /*  stroke-width: 1px;
@@ -61,14 +61,14 @@
             width: 29px;
             top: 15px; //12px;
             left: 1px; //10px;
-            background-color: $multimedia-vdo-ctrl-button;// $vdo-ctrl-button; //red;
+            background-color: var(--multimedia-vdo-ctrl-button);// $vdo-ctrl-button; //red;
             transform-origin : 50% 50%;
             transform: rotate(-45deg);
           }
         }
       }
       &.accept{
-        color:$multimedia-vdo-button-accept; // green;
+        color:var(--multimedia-vdo-button-accept); // green;
       }
       &[data-state="0"]{
         color:var(--egrey-b6); //var(--egrey-89); #d3d3d3
@@ -81,13 +81,13 @@
           width: 25px;
           top: 16px; //12px;
           left: 3px; //10px;
-          background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; //red;
+          background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; //red;
           transform-origin : 50% 50%;
           transform: rotate(-45deg);
         }
       }
       &[data-online="1"]{
-        background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; //red;
+        background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; //red;
         color: var(--ewhite);
       }
       &[data-enabled="0"]{
