--- a/src/drumee/builtins/window/screenshare/skin/endpoint.scss
+++ b/src/drumee/builtins/window/screenshare/skin/endpoint.scss
@@ -27,7 +27,7 @@
     }
   }
   &__endpoint-local{
-    background-color: $multimedia-vdo-background-color;//$vdo-background-color; 
+    background-color: var(--multimedia-background);//$vdo-background-color; 
     position: absolute;
     top: 20px;
     right: 40px;
