--- a/src/drumee/modules/dmz/meeting/skin/command.scss
+++ b/src/drumee/modules/dmz/meeting/skin/command.scss
@@ -22,10 +22,10 @@
     border: 1.2px transparent solid;//$vdo-border-grey
     background-color:var(--default-bg); 
     margin:0 7px; // 0 6px;
-    color: $multimedia-vdo-icon;//var(--egrey-b6); 
+    color: var(--multimedia-vdo-icon);//var(--egrey-b6); 
     cursor: pointer;
     &.line{
-     background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button;
+     background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button;
      color:var(--default-icon-reverse); 
      fill: none;
      stroke-width: 0;//1.5px;
@@ -39,14 +39,14 @@
      }
     }
     &.reject{
-      background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; 
+      background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; 
     }
     &.screen{
-      color:$multimedia-vdo-button-accept;//$vdo-button-accept;
+      color:var(--multimedia-vdo-button-accept);//$vdo-button-accept;
       padding: 3.5px;//8.5px;
       margin-left:14px;
       &[data-state="0"]{
-        color : $multimedia-vdo-icon;//var(--egrey-b6);
+        color : var(--multimedia-vdo-icon);//var(--egrey-b6);
       }
       &[data-state="0"]{
         &:before{
@@ -56,17 +56,17 @@
           width: 31px;//29px;
           top: 15px;//16px;
           left: 1px;//0px;  
-          background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; 
+          background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; 
           transform-origin : 50% 50%;
           transform: rotate(-45deg);
         }
       }
     }
     &.accept{
-      color: $multimedia-vdo-button-accept;//$vdo-button-accept;
+      color: var(--multimedia-vdo-button-accept);//$vdo-button-accept;
     }
     &[data-state="0"]{
-      color: $multimedia-vdo-icon;//var(--egrey-b6); 
+      color: var(--multimedia-vdo-icon);//var(--egrey-b6); 
     }
     &[data-state="0"]{
       &:before{
@@ -76,13 +76,13 @@
         width: 25px;
         top: 16px; //12px;
         left: 3px; //10px;
-        background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button;
+        background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button;
         transform-origin : 50% 50%;
         transform: rotate(-45deg);
       }
     }
     &[data-online="1"]{
-      background-color: $multimedia-vdo-ctrl-button;//$vdo-ctrl-button; 
+      background-color: var(--multimedia-vdo-ctrl-button);//$vdo-ctrl-button; 
       color: var(--ewhite);
     }
     &[data-enabled="0"]{
