--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -9,7 +9,7 @@
 @import 'channel';
 @import 'filter';
 @import 'folder';
-@import 'connect';
+// @import 'connect';
 // @import 'multimedia';
 // @import 'website';
 // @import 'sharebox';
