Migration complted folder

--- a/src/drumee/builtins/media/grid/skin/container.scss
+++ b/src/drumee/builtins/media/grid/skin/container.scss
@@ -65,7 +65,7 @@
     &::before {
       border-left: 8px solid transparent;
       border-radius: 0 3px 0 0;
-      border-top: 8px solid $folder-main-before-color;
+      border-top: 8px solid var(--folder-main-before-color);
       content: " ";
       position: absolute;
       right:10px;
@@ -117,15 +117,15 @@
 }
 
 &.folder {
-  background-color: $folder-main; //#468ee5;
+  background-color: var(--folder-main); //#468ee5;
   &:before {
     content: " ";
     position: absolute;
     top: 0;
     right: 0;
-    border-top: 13px solid $folder-main-light ;// #75b1fc;
+    border-top: 13px solid var(--folder-main-light);// #75b1fc;
     border-left: 13px solid transparent;
-    border-right: 13px solid $folder-main-light ;//#75b1fc;
+    border-right: 13px solid var(--folder-main-light);//#75b1fc;
     border-radius: 0 6px 0 0;
     width: 62px;
   }
@@ -163,7 +163,7 @@
       //   //background-color: #a3c6f2;
       // }
       .filename-tooltips{
-        background-color: $folder-main-background-filename;//#a3c6f2;
+        background-color: var(--folder-main-filename-bg);//#a3c6f2;
       }
     }
   }
