--- a/src/drumee/builtins/window/helpdesk/widget/help-item/skin/index.scss
+++ b/src/drumee/builtins/window/helpdesk/widget/help-item/skin/index.scss
@@ -83,7 +83,7 @@
         }
         &.folder{
           svg{
-            fill:$folder-main;//#1d8aea;
+            fill:var(--folder-main);//#1d8aea;
             width: 20px;
           }
         }
