--- a/src/drumee/builtins/window/serverexplorer/widget/efs/skin/filename.scss
+++ b/src/drumee/builtins/window/serverexplorer/widget/efs/skin/filename.scss
@@ -45,7 +45,7 @@
           
     &.folder {
       color: var(--default-text-color);
-      background-color: $folder-main-background-filename;
+      background-color: var(--folder-main-filename-bg);
     }
   }
 
@@ -113,7 +113,7 @@
     }
           
     &.folder {
-      background-color: $folder-main-background-filename;
+      background-color: var(--folder-main-filename-bg);
     }
 
     &.image, &.video {
