--- a/src/drumee/builtins/window/skin/group/header/breadcrumbs.scss
+++ b/src/drumee/builtins/window/skin/group/header/breadcrumbs.scss
@@ -73,7 +73,7 @@
       width: 24px;
 
       &.blue {
-        color: $folder-background-header;
+        color: var(--folder-main);
       }
 
       &.purple,
