--- a/src/drumee/modules/desk/wm/dock/skin/index.scss
+++ b/src/drumee/modules/desk/wm/dock/skin/index.scss
@@ -201,7 +201,7 @@
     &.maker {
       &.folder {
         svg {
-          color: $folder-main;
+          color: var(--folder-main);
         }
       }
 
