--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -8,7 +8,7 @@
 @import 'bigchat';
 @import 'channel';
 @import 'filter';
-@import 'folder';
+// @import 'folder';
 // @import 'connect';
 // @import 'multimedia';
 // @import 'website';
