--- a/src/drumee/builtins/window/website/skin/header.scss
+++ b/src/drumee/builtins/window/website/skin/header.scss
@@ -56,7 +56,7 @@
     border-radius: 6px 6px 0 0;
 
     &[data-content="folder"] {
-      background-color: $folder-background-header;
+      background-color: var(--folder-main);
     }
   }
 
