Migration complted filter

--- a/src/drumee/builtins/window/filter/skin/index.scss
+++ b/src/drumee/builtins/window/filter/skin/index.scss
@@ -10,20 +10,20 @@
 .window-filter{
   &__header{
     border-bottom: none;
-    background-color: $filter-background-header ;
+    background-color: var(--filter-background-header);
     &-control{
       .icon{
-        color: $filter-default-icon-reverse;
+        color: var(--default-icon-reverse);
       }
     }
   }
   &__title{
     margin: auto;
     justify-content: center;
-    color: $filter-default-text-reverse;
+    color: var(--default-text-reverse);
     &.text{
       align-items: center;
-      @include typo($size:18px,$line:24px,$weight:400,$color:$filter-default-text-reverse);
+      @include typo($size:18px,$line:24px,$weight:400,$color: var(--default-text-reverse));
       .icon{
         position: relative;
         right: 0px;
