--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -7,7 +7,7 @@
 @import 'addressbook';
 @import 'bigchat';
 @import 'channel';
-@import 'filter';
+// @import 'filter';
 // @import 'folder';
 // @import 'connect';
 // @import 'multimedia';
