--- a/src/drumee/builtins/widget/disk-usage/skin/index.scss
+++ b/src/drumee/builtins/widget/disk-usage/skin/index.scss
@@ -43,7 +43,7 @@
 
     &.private {
       color: var(--default-icon-reverse);
-      background-color: $teamroom-main;
+      background-color: var(--teamroom-main);
     }
 
     &.detail {
