--- a/src/drumee/builtins/window/channel/media-wrapper/skin/index.scss
+++ b/src/drumee/builtins/window/channel/media-wrapper/skin/index.scss
@@ -10,7 +10,7 @@
 
 .media-wrapper{
   &__ui {
-    background-color:$channel-default-background;
+    background-color:var(--default-background);
   }
   &__body {
     height: 100%;
