--- a/src/drumee/builtins/window/helpdesk/widget/help-item/skin/index.scss
+++ b/src/drumee/builtins/window/helpdesk/widget/help-item/skin/index.scss
@@ -89,7 +89,7 @@
         }
         &.shared-folder{
           svg{
-            fill:$teamroom-main;//#bd44d9;
+            fill:var(--teamroom-main);//#bd44d9;
             width: 20px;
           }
         }
