--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -6,7 +6,7 @@
 @import 'editbox';
 @import 'addressbook';
 @import 'bigchat';
-@import 'channel';
+// @import 'channel';
 // @import 'filter';
 // @import 'folder';
 // @import 'connect';
